@@ -17,6 +17,17 @@
 	redundant anyway, since the following (add-hook ...) statements
 	all submit the optional 'local' argument.
 
+2005-03-08  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml.el (psgml-version): bump version
+
+	* psgml-parse.el (sgml-parse-catalog-buffer): handle system and override
+	(sgml-catalog-lookup): new parameters, handle system and override
+	in catalogs.
+	(sgml-lookup-sysid-as-file): remove
+	(sgml-external-file): simplified and use new sgml-catalog-lookup
+	interface.
+
 2005-03-05  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* Version 1.3.2 released
